[metadata]
name = python-ndn
version = attr: ndn.__version__
url = https://github.com/named-data/python-ndn
download_url = https://pypi.python.org/pypi/python-ndn
project_urls =
    Tracker=https://github.com/named-data/python-ndn/issues
    Documentation=https://python-ndn.readthedocs.io
    Source=https://github.com/named-data/python-ndn
    Changelog=https://python-ndn.readthedocs.io/en/latest/src/changelog.html
author = Xinyu Ma
author_email = ma.xinyu.26a@kyoto-u.jp
description = An NDN client library with AsyncIO support in Python 3
long_description = file: README.rst, CHANGELOG.rst
keywords = NDN
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Internet
    Topic :: System :: Networking
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
install_requires =
    pycryptodomex>=3.10.1
    pygtrie>=2.4.2
    aenum>=3.0.0
python_requires = >=3.7
setup_requires =
    setuptools>=56.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=5.3.5
    pytest-cov>=2.8.1
    flake8>=3.7.9
    build>=0.5.1

[options.entry_points]
console_scripts =
    pyndnsec = ndn.bin.sec:main
    pyndntools = ndn.bin.tools:main
    pynfdc = ndn.bin.nfdc:main
