[metadata]
name = python-ndn
version = attr: ndn.__version__
url = https://github.com/named-data/python-ndn
download_url = https://pypi.python.org/pypi/python-ndn
project_urls =
    Tracker=https://github.com/named-data/python-ndn/issues
    Documentation=https://python-ndn.readthedocs.io
    Source=https://github.com/named-data/python-ndn
    Changelog=https://python-ndn.readthedocs.io/en/latest/src/changelog.html
author = Xinyu Ma
author_email = ma.xinyu.26a@kyoto-u.jp
description = An NDN client library with AsyncIO support in Python 3
long_description = file: README.rst, CHANGELOG.rst
keywords = NDN
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Internet
    Topic :: System :: Networking
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
install_requires =
    pycryptodomex>=3.11.0
    pygtrie>=2.4.2
    aenum>=3.1.5
    lark>=1.1.2
python_requires = >=3.9
setup_requires =
    setuptools>=59.2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.1.2
    pytest-cov>=3.0.0
    flake8>=4.0.1
    build>=0.8.0
pyca =
    cryptography>=37.0.2

[options.entry_points]
console_scripts =
    pyndnsec = ndn.bin.sec:main
    pyndntools = ndn.bin.tools:main
    pynfdc = ndn.bin.nfdc:main
